--- a/config/locales/defaults/en.yml
+++ b/config/locales/defaults/en.yml
@@ -7,3 +7,13 @@ en:
         profile_image: "ProfileImage"
         nickname: "Nickname"
         country: "Country"
+        email: "Email address"
+        password: "Password"
+        remember_me: "Remember me"
+      map:
+        spotname: "Spot"
+      comment:
+        title: "Title"
+        comment: "Comment"
+        image: "Image(not necessary)"
+        star: "Score"
