--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -9,6 +9,7 @@ fr:
       searchbutton: "Chercher"
       registration: "Inscrire comme nouvel endroit"
       warning: "Il a besoin de s'inscrire pour poster"
+      error: "Cet endroit est déjà existé"
      show:
       comment: "Il n'y a pas d'un bouche à oreille"
       newcomment: "Comment on this spot"
