--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -25,4 +25,5 @@ en:
      form:
       commentonlymember: "You can comment after being a member"
       submitcomment: "Submit"
+      selectimage: "select a image"
 
