--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -25,3 +25,4 @@ fr:
      form:
       commentonlymember: "Inscrivez-vous pour commenter"
       submitcomment: "Envoyer"
+      selectimage: "choisir une image"
