--- a/config/locales/views/layouts/ja.yml
+++ b/config/locales/views/layouts/ja.yml
@@ -11,6 +11,9 @@ ja:
        forward: "前方一致"
        backward: "後方一致"
        partial: "部分一致"
+       ja: "日本語"
+       en: "English"
+       fr: "Français"
 
       error_messages:
        errormessages: "件に誤りがあります。"
