--- a/config/locales/views/layouts/ja.yml
+++ b/config/locales/views/layouts/ja.yml
@@ -6,6 +6,7 @@ ja:
        logout: "ログアウト"
        login: "ログイン"
        serachspot: "スポットを探す"
+       hashtag: "ハッシュタグ"
        searchbutton: "検索"
        exact: "完全一致"
        forward: "前方一致"
