--- a/config/locales/views/layouts/fr.yml
+++ b/config/locales/views/layouts/fr.yml
@@ -5,6 +5,7 @@ fr:
        mypage: "Ma page"
        logout: "Se déconnecter"
        login: "Se connecter"
+       geustuser: "Se connecter en tant qu'utilisateur hôte"
        serachspot: "Chercher un endroit"
        hashtag: "Hashtag"
        searchbutton: "Recherche"
