--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -8,7 +8,9 @@ en:
       searchbutton: "Search"
       registration: "Register as new Spot"
       warning: "You need to registrate to post Spots"
-      error: "This spot is already posted"
+      # error: "This spot is already posted"
+      nocomment: "This spot has no comment "
+      noimage: "No Images posted"
      index:
      map:
        <<: *map_common
