--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -8,8 +8,8 @@ en:
       searchbutton: "Search"
       registration: "Register as new Spot"
       warning: "You need to registrate to post Spots"
-      # error: "This spot is already posted"
-      nocomment: "This spot has no comment "
+      error: "This spot is already posted"
+      nocomment: "No one posted comment on this spot"
       noimage: "No Images posted"
      index:
      map:
