--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -18,6 +18,7 @@ en:
        <<: *map_common
      show: &map_common
       comment: "There is no comment for this spot"
+      nophoto: "No Images posted"
       newcomment: "Comment on this spot"
       backtomap: "Back to Map"
       logintocomment: "Log in to comment"
