Remove translation because of layout changes

--- a/config/locales/views/users/en.yml
+++ b/config/locales/views/users/en.yml
@@ -6,6 +6,8 @@ en:
      edittitle: "Edit mypage"
      likedspots: "Liked Spots"
      mypagetitle: "My page"
+     no_favorited: "This user doesn't favorite asy spots"
+     selectimage: "select a image"
     edit:
       <<: *user_common
     favorites:
