--- a/config/locales/views/maps/ja.yml
+++ b/config/locales/views/maps/ja.yml
@@ -7,6 +7,10 @@ ja:
       searchandpost: "スポット検索・投稿"
       searchbutton: "検索"
       registration: "新たなスポットを登録する"
+      how_to_use: "本サイトは地図上に投稿されたスポットへ　口コミできるサービスです"
+      description: "投稿したスポットを左の地図で検索します。"
+      description2: "スポットがない場合は新たにスポット登録することができます。"
+      description3: "一度投稿されたスポットは地図上のピンからアクセスでき、遷移先のページで口コミ投稿できます！"
       warning: "スポット投稿は会員の方のみができます"
       error: "既にスポットは登録済みです"
       nocomment: "まだ口コミはありません"
