--- a/config/locales/views/maps/ja.yml
+++ b/config/locales/views/maps/ja.yml
@@ -11,6 +11,8 @@ ja:
       description: "投稿したスポットを左の地図で検索します。"
       description2: "スポットがない場合は新たにスポット登録することができます。"
       description3: "一度投稿されたスポットは地図上のピンからアクセスでき、遷移先のページで口コミ投稿できます！"
+      description4: "また、ページ下部では人気のスポットなどが確認できます。"
+      description5: "スポット・ハッシュタグの検索は上部の検索ボックスから行えます。"
       warning: "スポット投稿は会員の方のみができます"
       error: "既にスポットは登録済みです"
       nocomment: "まだ口コミはありません"
