Add English description format

--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -7,6 +7,12 @@ en:
       searchandpost: "Search/Post a Spot"
       searchbutton: "Search"
       registration: "Register as new Spot"
+      how_to_use: "This site provide you a lot of reviews with Map"
+      description: ""
+      description2: ""
+      description3: ""
+      description4: ""
+      description5: ""
       warning: "You need to registrate to post Spots"
       error: "This spot is already posted"
       nocomment: "No one posted comment on this spot"
