--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -8,7 +8,7 @@ en:
       searchbutton: "Search"
       registration: "Register as new Spot"
       how_to_use: "This site provide you a lot of reviews with Map"
-      description: ""
+      description: "Use left map to find already posted spots"
       description2: ""
       description3: ""
       description4: ""
