--- a/config/locales/views/maps/ja.yml
+++ b/config/locales/views/maps/ja.yml
@@ -8,7 +8,7 @@ ja:
       searchbutton: "検索"
       registration: "新たなスポットを登録する"
       how_to_use: "本サイトは地図上に投稿されたスポットへ　口コミできるサービスです"
-      description: "投稿したスポットを左の地図で検索します。"
+      description: "投稿されたスポットを左の地図で検索します。"
       description2: "スポットがない場合は新たにスポット登録することができます。"
       description3: "一度投稿されたスポットは地図上のピンからアクセスでき、遷移先のページで口コミ投稿できます！"
       description4: "また、ページ下部では人気のスポットなどが確認できます。"
