--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -9,7 +9,7 @@ en:
       registration: "Register as new Spot"
       how_to_use: "This site provide you a lot of reviews with Map"
       description: "Use left map to find already posted spots"
-      description2: ""
+      description2: "Post as new spot when you could not find it"
       description3: ""
       description4: ""
       description5: ""
