--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -7,6 +7,12 @@ fr:
       searchandpost: "Chercher/Poster un endroit"
       searchbutton: "Chercher"
       registration: "Inscrire comme nouvel endroit"
+      how_to_use: "Cet site vous donne les plusieurs bouches bouche à oreille avec la carte"
+      description: ""
+      description2: ""
+      description3: ""
+      description4: ""
+      description5: ""
       warning: "Il a besoin de s'inscrire pour poster"
       error: "Cet endroit est déjà existé"
       nocomment: "Personne n'a commenté"
