--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -10,7 +10,7 @@ en:
       how_to_use: "This site provide you a lot of reviews with Map"
       description: "Use left map to find already posted spots"
       description2: "Post as new spot when you could not find it"
-      description3: ""
+      description3: "Once posted, the spot can be accessed from the pin on the map, and you can post a review on the destination page!"
       description4: ""
       description5: ""
       warning: "You need to registrate to post Spots"
