--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -10,7 +10,7 @@ fr:
       how_to_use: "Cet site vous donne les plusieurs bouches bouche à oreille avec la carte"
       description: ""
       description2: ""
-      description3: ""
+      description3: "Une fois posté, le spot est accessible à partir de l'épingle sur la carte, et peut être posté oralement sur la page de la destination de transition!"
       description4: ""
       description5: ""
       warning: "Il a besoin de s'inscrire pour poster"
