--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -11,7 +11,7 @@ fr:
       description: ""
       description2: ""
       description3: "Une fois posté, le spot est accessible à partir de l'épingle sur la carte, et peut être posté oralement sur la page de la destination de transition!"
-      description4: ""
+      description4: "Vous pouvez également consulter les spots populaires au bas de la page."
       description5: ""
       warning: "Il a besoin de s'inscrire pour poster"
       error: "Cet endroit est déjà existé"
