--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -8,7 +8,7 @@ fr:
       searchbutton: "Chercher"
       registration: "Inscrire comme nouvel endroit"
       how_to_use: "Cet site vous donne les plusieurs bouches bouche à oreille avec la carte"
-      description: ""
+      description: "Utilisez la carte de gauche pour trouver les spots déjà affichés"
       description2: ""
       description3: "Une fois posté, le spot est accessible à partir de l'épingle sur la carte, et peut être posté oralement sur la page de la destination de transition!"
       description4: "Vous pouvez également consulter les spots populaires au bas de la page."
