--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -7,7 +7,7 @@ en:
       searchandpost: "Search/Post a Spot"
       searchbutton: "Search"
       registration: "Register as new Spot"
-      how_to_use: "This site provide you a lot of reviews with Map"
+      how_to_use: "This site is a service that allows you to review the spots posted on the map."
       description: "Use left map to find already posted spots"
       description2: "Post as new spot when you could not find it"
       description3: "Once posted, the spot can be accessed from the pin on the map, and you can post a review on the destination page!"
