--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -7,7 +7,7 @@ fr:
       searchandpost: "Chercher/Poster un endroit"
       searchbutton: "Chercher"
       registration: "Inscrire comme nouvel endroit"
-      how_to_use: "Cet site vous donne les plusieurs bouches bouche à oreille avec la carte"
+      how_to_use: "Ce site est un service qui vous permet de consulter les spots affichés sur la carte."
       description: "Utilisez la carte de gauche pour trouver les spots déjà affichés"
       description2: "Publier comme nouvel endroit lorsque vous ne l'avez pas trouvé"
       description3: "Une fois posté, le spot est accessible à partir de l'épingle sur la carte, et peut être posté oralement sur la page de la destination de transition!"
