--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -9,7 +9,7 @@ en:
       registration: "Register as new Spot"
       how_to_use: "This site is a service that allows you to review the spots posted on the map."
       description: "Use left map to find already posted spots"
-      description2: "Post as new spot when you could not find it"
+      description2: "Post as new spot when you could not find it."
       description3: "Once posted, the spot can be accessed from the pin on the map, and you can post a review on the destination page!"
       description4: "You can also check popular spots at the bottom of the page."
       description5: "You can search for spot hashtags from the search box at the top."
