--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -8,8 +8,8 @@ fr:
       searchbutton: "Chercher"
       registration: "Inscrire comme nouvel endroit"
       how_to_use: "Ce site est un service qui vous permet de consulter les spots affichés sur la carte."
-      description: "Utilisez la carte de gauche pour trouver les spots déjà affichés"
-      description2: "Publier comme nouvel endroit lorsque vous ne l'avez pas trouvé"
+      description: "Utilisez la carte de gauche pour trouver les spots déjà affichés."
+      description2: "Publier comme nouvel endroit lorsque vous ne l'avez pas trouvé."
       description3: "Une fois posté, le spot est accessible à partir de l'épingle sur la carte, et peut être posté oralement sur la page de la destination de transition!"
       description4: "Vous pouvez également consulter les spots populaires au bas de la page."
       description5: "Vous pouvez rechercher des hashtags spot dans le champ de recherche en haut."
