--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -13,7 +13,7 @@ fr:
       description3: "Une fois posté, le spot est accessible à partir de l'épingle sur la carte, et peut être posté oralement sur la page de la destination de transition!"
       description4: "Vous pouvez également consulter les spots populaires au bas de la page."
       description5: "Vous pouvez rechercher des hashtags spot dans le champ de recherche en haut."
-      warning: "Il a besoin de s'inscrire pour poster"
+      warning: "Seuls les membres peuvent publier des spots."
       error: "Cet endroit est déjà existé"
       nocomment: "Personne n'a commenté"
       noimage: "Il n'y a pas encore d'image"
