--- a/config/locales/views/maps/ja.yml
+++ b/config/locales/views/maps/ja.yml
@@ -13,8 +13,8 @@ ja:
       description3: "一度投稿されたスポットは地図上のピンからアクセスでき、遷移先のページで口コミ投稿できます！"
       description4: "また、ページ下部では人気のスポットなどが確認できます。"
       description5: "スポット・ハッシュタグの検索は上部の検索ボックスから行えます。"
-      warning: "スポット投稿は会員の方のみができます"
-      error: "既にスポットは登録済みです"
+      warning: "スポット投稿は会員の方のみができます。"
+      error: "既にスポットは登録済みです。"
       nocomment: "まだ口コミはありません"
       noimage: "写真はまだありません"
       ranks_by_country: "国別ランキング"
