--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -27,7 +27,7 @@ en:
       nophoto: "No Images posted"
       newcomment: "Comment on this spot"
       backtomap: "Back to Map"
-      logintocomment: "Log in to comment"
+      logintocomment: "Log in and post a review"
       hascommented: "has commented"
       delete: "delete"
       areyousure: "Are you sure?"
