--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -27,7 +27,7 @@ fr:
       nophoto: "Il n'y a pas encore d'image"
       newcomment: "Commentaire pour cet endroit"
       backtomap: "Retourner à la carte"
-      logintocomment: "Se connecter pour commenter"
+      logintocomment: "Se connecter pour publier un avis"
       hascommented: "a commenté(e)"
       delete: "supprimer"
       areyousure: "Vous êtes sûr?"
