--- a/config/locales/views/users/fr.yml
+++ b/config/locales/views/users/fr.yml
@@ -1,7 +1,7 @@
 fr:
    users:
     show: &user_common
-     username: "surnom"
+     username: "Surnom"
      country: "Pays"
      edittitle: "Éditer profile"
      likedspots: "Places favories"
