--- a/config/locales/views/users/en.yml
+++ b/config/locales/views/users/en.yml
@@ -4,7 +4,7 @@ en:
      username: "Nickname"
      country: "Country"
      edittitle: "Edit mypage"
-     likedspots: "Liked Spots"
+     likedspots: "List of favorite spots"
      mypagetitle: "My page"
      no_favorited: "This user doesn't favorite asy spots"
      selectimage: "select a image"
