--- a/config/locales/views/users/fr.yml
+++ b/config/locales/views/users/fr.yml
@@ -4,7 +4,7 @@ fr:
      username: "Surnom"
      country: "Pays"
      edittitle: "Éditer profile"
-     likedspots: "Places favories"
+     likedspots: "Liste des spots préférés"
      mypagetitle: "Ma page"
      no_favorited: "Cet utilisateur n'a aucune place favorie"
      selectimage: "choisir une image"
