--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -28,7 +28,7 @@ en:
       newcomment: "Post a review on this spot"
       backtomap: "Back to Map"
       logintocomment: "Log in and post a review"
-      hascommented: "has commented"
+      hascommented: "posted by"
       delete: "delete"
       areyousure: "Are you sure you want to delete it?"
       postedon: "Posted on "
