--- a/config/locales/views/maps/fr.yml
+++ b/config/locales/views/maps/fr.yml
@@ -6,7 +6,7 @@ fr:
       mostliked: "Les places populaires"
       searchandpost: "Chercher/Poster un endroit"
       searchbutton: "Chercher"
-      registration: "Inscrire comme nouvel endroit"
+      registration: "Inscrire un nouvel endroit"
       how_to_use: "Ce site est un service qui vous permet de consulter les spots affichés sur la carte."
       description: "Utilisez la carte de gauche pour trouver les spots déjà affichés."
       description2: "Publier comme nouvel endroit lorsque vous ne l'avez pas trouvé."
