--- a/config/locales/views/maps/en.yml
+++ b/config/locales/views/maps/en.yml
@@ -6,7 +6,7 @@ en:
       mostliked: "Popular Spots"
       searchandpost: "Search/Post a Spot"
       searchbutton: "Search"
-      registration: "Register as new Spot"
+      registration: "Register a new Spot"
       how_to_use: "This site is a service that allows you to review the spots posted on the map."
       description: "Use left map to find already posted spots"
       description2: "Post as new spot when you could not find it."
