--- a/config/locales/views/search/en.yml
+++ b/config/locales/views/search/en.yml
@@ -1,7 +1,7 @@
 en:
    search:
-    search: 
+    search:
      result_spot: "Spot search for"
      create_spot: "Post new Spot"
      link_to_map: "Jump to Map"
-     result_hashtag: "Hashtag search for"
+     result_hashtag: "Hashtag search results"
