--- a/config/locales/views/search/fr.yml
+++ b/config/locales/views/search/fr.yml
@@ -4,5 +4,5 @@ fr:
      result_spot: "Place(s) à la recherche de"
      create_spot: "Insccrire une nouvelle place"
      link_to_map: "Lien à la carte"
-     result_hashtag: "Hashtag(s) à la recherche de"
+     result_hashtag: "Résultats de recherche de hashtag"
 
